V2 - add AgreementId to response